--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,6 @@
     <meta name="Title" content="Andy Drette Full Stack Developer and Designer">
     <meta name="description" content="Full Stack Developer and Designer living in downtown Toronto">
     <meta name="author" content="Andy Durette">
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Andy Drette - Full Stack Developer and Designer</title>
     <!-- Custom fonts -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
