--- a/public/index.html
+++ b/public/index.html
@@ -43,5 +43,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Element.prototype.classList"></script>
+  <script src="https://unpkg.com/focus-visible"></script>
   
 </html>
