--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script src="https://unpkg.com/focus-visible"></script>
+ <!--<script src="https://unpkg.com/focus-visible"></script>-->
   
 </html>
