--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="Title" content="Andy Drette Full Stack Developer and Designer">
+    <meta name="Title" content="Andy Durette Full Stack Developer and Designer">
     <meta name="description" content="Full Stack Developer and Designer living in downtown Toronto">
     <meta name="author" content="Andy Durette">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Andy Drette - Full Stack Developer and Designer</title>
+    <title>Andy Durette - Full Stack Developer and Designer</title>
     <!-- Custom fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"> 
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic' rel='stylesheet' type='text/css'>
